fixed about page scrollbar off screen

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -4,8 +4,8 @@
 .scrollComponent {
   position: relative;
   max-height: 100vh;
-  width: 100%;
-  left: 15%;
+  width: 80%;
+  left: 10%;
 
   transition: $transitionIn;
   z-index: 10;
@@ -47,7 +47,7 @@
   scroll-snap-align: start;
 }
 
-@media screen and (max-width:700px) {
+@media screen and (max-width:400px) {
   .scrollComponent{
     display: block;
     flex-wrap: wrap;
